created UI for product details

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,25 @@
 *{
   margin: 0;
   scroll-behavior: smooth;
-  
+}
 
+
+/*  Chrome ,opera , Edge, Safari  */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance:none ;
+  margin: none;
+}
+
+/* Firefox */
+input[type='number']{
+  -moz-appearance: textfield;
+}
+
+.greenColor {
+  color: green;
+}
+
+.redColor {
+  color: red;
 }
