--- a/src/components/Product/Products.css
+++ b/src/components/Product/Products.css
@@ -72,3 +72,23 @@
     background-color: tomato;
     color: white;
   }
+
+  .filterBox{
+    width: 10vmax;
+    position: absolute;
+    top: 10vmax;
+    left: 4vmax;
+    
+  }
+
+  @media screen and (max-width:600px){
+    .filterBox{
+      width: 20vmax;
+      position: static;
+      margin: auto;
+   
+    }
+    .page-link{
+      font: 300 1.7vmax "Roboto";
+    }
+  }
