--- a/src/components/Product/Products.css
+++ b/src/components/Product/Products.css
@@ -13,6 +13,7 @@
     flex-wrap: wrap;
     padding: 0 5vmax;
     justify-content: center;
+    min-height: 30vh;
 }
 .paginationBox {
     display: flex;
