--- a/src/components/User/LoginRegister.css
+++ b/src/components/User/LoginRegister.css
@@ -167,3 +167,57 @@ background-color: rgb(179, 66, 46);
 .shiftToRight{
     transform: translateX(100%);
 }
+
+
+@media screen and (max-width:600px){
+    .LoginSignUpContainer{
+        background-color: white;
+    }
+    .LoginSignUpBox{
+        width: 100vw;
+        height: 95vh;
+    }
+
+    .login_signup_toggle{
+        height: 5vmax;
+    }
+    .login_signup_toggle > p{
+        font: 300 1.5vmax "Roboto";
+    }
+
+    .loginForm,
+    .signupForm{
+        padding: 5vmax;
+    }
+
+    .loginForm > div > input,
+    .signupForm > div > input{
+        padding: 2.5vmax 5vmax;
+        font: 300 1.7vmax "Roboto";
+    }
+
+    .loginForm > div > svg,
+    .signupForm > div > svg {
+        font-size: 2.8vmax;
+    }
+
+    .loginForm > a {
+        font: 500 1.8vmax "Gill Sans";
+    }
+
+    #registerImage > img {
+        width: 8vmax;
+        border-radius: 100%;
+    }
+    #registerImage > input::file-selector-button{
+        height: 7vh;
+        font: 400 1.8vmax "Roboto";
+    } 
+
+    .loginBtn,
+    .signupBtn{
+        font: 300 1.9vmax "Roboto";
+        padding: 1.8vmax;
+    }
+    
+}
